# facial-attendance-device

./: CMakeLists.txt  piToolchain.cmake
src/: main.cpp
